fix horizontal scrollbar

--- a/src/components/Feed/index.module.scss
+++ b/src/components/Feed/index.module.scss
@@ -13,7 +13,7 @@
   width: 600px;
 
   @media (max-width: 600px) {
-    width: 95%;
+    width: 97%;
   }
 
   .loadMore {
