--- a/src/components/Navbar/index.module.scss
+++ b/src/components/Navbar/index.module.scss
@@ -6,7 +6,6 @@
   background-color: #1d2226;
   border-bottom: 1px solid #383838;
   height: 100px;
-  width: 100vw;
 
   .main {
     display: flex;
